<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRestaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

            <TextView
                    android:id="@+id/txtSNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:text="@string/_1"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.8"
                    android:orientation="vertical"
                    android:padding="6dp">

                <TextView
                        android:id="@+id/txtItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textSize="17sp"
                        android:text="@string/restaurant_name"
                        android:textColor="@android:color/black"/>

                <TextView
                        android:id="@+id/txtItemCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textSize="14sp"
                        android:text="@string/tg_400"/>

            </LinearLayout>

            <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2.2"
                    android:background="@color/colorPrimary"
                    android:text="@string/add"
                    android:visibility="visible"

                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

            <Button
                    android:id="@+id/btnRemoveFromCart"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="2.2"
                    android:background="#FFC400"
                    android:text="@string/remove"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>