<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:id="@+id/rlOTP">

            <TextView
                android:id="@+id/txtEnterMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_otp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/edtOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnterMobile"
                android:background="#ffffff"
                android:padding="10dp"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="4"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:hint="@string/otp_4_characters"/>


            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtOTP"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/new_password_6_characters"
                android:inputType="textPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/edtConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtNewPassword"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtConfirmNewPassword"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/submit"
                android:layout_centerInParent="true" />


        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>
